# TextEditor-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
